# typeless

./: .gitignore  README.md  UI设计.pen  start-app.cmd
.claude/: settings.local.json
.github/: release-notes-template.md
.github/workflows/: release.yml
desktop/: README.md  hotkey_agent.ahk
docs/plans/: 2026-02-15-voice-text-organizer-design.md  2026-02-15-voice-text-organizer.md  2026-02-16-context-speed-quality-design.md  2026-02-16-context-speed-quality-plan.md  (+4 more)
packaging/inno/: Typeless.iss
scripts/: build-agent.ps1  build-backend.ps1  build-installer.ps1  run-dev.ps1  run-service.ps1  run-tests.ps1
service/: .env.example  README.md  pyproject.toml
service/src/voice_text_organizer/: __init__.py  asr.py  audio.py  config.py  history_store.py  main.py  personalization.py  policy.py  rewrite.py  router.py  runtime_paths.py  schemas.py  service_entry.py  session_store.py  template_classifier.py  version.py  version_check.py
service/src/voice_text_organizer/providers/: __init__.py  ollama.py  siliconflow.py
service/tests/: conftest.py  test_app_version_api.py  test_asr.py  test_config.py  test_dashboard_api.py  test_e2e_mocked.py  test_health.py  test_history_store.py  test_ollama.py  test_packaging_requirements.py  test_personalization.py  test_policy.py  test_record_api.py  test_rewrite_prompt.py  test_rewrite_template_prompt.py  test_router.py  test_runtime_paths.py  test_sample_quality.py  test_session_api.py  test_session_store.py  test_settings_api.py  test_siliconflow.py  test_template_classifier.py  test_template_policy.py  test_version_check.py
