[project]
name = "voice-text-organizer"
version = "0.1.0"
description = "Windows voice to text organizer service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "httpx>=0.27.0,<0.28.0",
  "pydantic>=2.11.0",
  "sounddevice>=0.4.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
